--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,4 @@ jobs:
         git add .
         git -c user.name='ci' -c user.email='ci' commit -m init
         git push -f -q https://git:${{ secrets.github_token }}@github.com/${{ github.repository }} HEAD:gh-pages
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master' || github.event_name == 'qaterial-update'
